# kamiyo-payai

./: .dockerignore  .env.backup_20251027_215319  .env.example  .env.local  .env.local.example  .env.payai.example  .env.production.template  .env.staging  .gitignore  .npmrc  ARBITRUM_PRODUCTION_READINESS_REPORT.md  ARCHITECTURE.md  AUTH_FIX_SUMMARY.md  AUTH_IMPLEMENTATION_SUMMARY.md  AUTH_VISUAL_GUIDE.txt  AUTONOMOUS_GROWTH_ENGINE_COMPLETE.md  BILLING_FIX_SUMMARY.md  BLOCKER3_FIX_SUMMARY.md  BRAND_IDENTITY.md  CHANGELOG.md  CHECKOUT_DOCUMENTATION_INDEX.md  CHECKOUT_PRODUCTION_READINESS.md  CHECKOUT_QUICK_START.md  CHECKOUT_TEST_RESULTS.md  CHECKOUT_VALIDATION_SUMMARY.md  CLAUDE.md  COMMIT_FROM_CORRECT_DIR.sh  COMPREHENSIVE_AUDIT_AND_FIX_PLAN.md  CONFIGURATION_GUIDE.md  CONFIGURATION_REPORT.md  CONTRIBUTING.md  CSRF_IMPLEMENTATION.md  DEBUG_INSTRUCTIONS.md  DEBUG_PRODUCTION_AUTH.md  DEEP_DIVE_ANALYSIS.md  DEEP_EXPLOIT_ANALYSIS_CAPABILITIES.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  (+161 more)
.agent-handoffs/: CURRENT_SESSION.md  HANDOFF_SYSTEM_SUMMARY.md  PRODUCTION_READINESS_100_PERCENT.md  PRODUCTION_READINESS_FINAL.md  SESSION_HANDOFF_TEMPLATE.md  USAGE_GUIDE.md  WS1_DATA_SOURCES.md  WS3_PRODUCTION_HARDENING.md  monitor_tokens.py  token_tracker.py  token_usage.json
.github/: pull_request_template.md
aggregators/: TESTING_RESULTS.md  __init__.py  certik.py  chainalysis.py  circuit_breaker.py  confidence_scorer.py  forta.py  onchain_monitor.py  orchestrator.py  parallel_executor.py  trailofbits.py  twitter.py
alembic/: README.md  env.py
api/: __init__.py  alert_limits.py  auth.py  auth_helpers.py  csrf_protection.py  database.py  main.py  main.py.backup_before_x402_refactor  main_x402.py  models.py  newsletter.py  pagination.py  security.py  test_main.py  websocket_server.py
brand/: BRAND_ALTERNATIVES.md
caching/: cache_manager.py  warming.py
cdn/: cache_rules.yaml
components/: AnimatedDots.js  Breadcrumb.js  Button.js  Card.js  ChatFooter.js  FAQ.js  Footer.js  (+13 more)
solana-programs/: Anchor.toml  Cargo.toml  README.md  SETUP.md
solana-programs/kamiyo-programs/: Anchor.toml
solana-programs/kamiyo-programs/programs/kamiyo-programs/: Cargo.toml
solana-programs/kamiyo-programs/programs/kamiyo-programs/src/: lib.rs
solana-programs/kamiyo-programs/tests/: kamiyo-programs.ts
solana-programs/programs/kamiyo-airdrop/: Cargo.toml  TECHNICAL_SUMMARY.md
solana-programs/programs/kamiyo-airdrop/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
solana-programs/programs/kamiyo-airdrop/src/instructions/: claim.rs  close_airdrop.rs  initialize.rs  mod.rs  reclaim_unclaimed.rs  update_merkle_root.rs
solana-programs/programs/kamiyo-staking/: Cargo.toml  TECHNICAL_SUMMARY.md
solana-programs/programs/kamiyo-staking/src/: constants.rs  errors.rs  lib.rs  state.rs
solana-programs/programs/kamiyo-staking/src/instructions/: claim_rewards.rs  fund_pool.rs  initialize_pool.rs  mod.rs  stake.rs  unstake.rs  update_pool.rs  withdraw.rs
solana-programs/programs/kamiyo-token/: Cargo.toml  TECHNICAL_SUMMARY.md
solana-programs/programs/kamiyo-token/src/: constants.rs  errors.rs  lib.rs  state.rs
solana-programs/programs/kamiyo-token/src/instructions/: harvest_fees.rs  initialize_mint.rs  mod.rs  set_transfer_fee.rs  update_authority.rs
solana-programs/programs/kamiyo-vesting/: Cargo.toml  TECHNICAL_SUMMARY.md
solana-programs/programs/kamiyo-vesting/src/: constants.rs  errors.rs  lib.rs  state.rs  utils.rs
solana-programs/programs/kamiyo-vesting/src/instructions/: claim_vested.rs  close_schedule.rs  create_vesting_schedule.rs  mod.rs  revoke_vesting.rs  transfer_beneficiary.rs
solana-programs/scripts/airdrop/: README.md  example-allocations.csv  generate-merkle-tree.ts  generate_merkle_tree.py
(+1146 files in other folders)
