[workspace]
resolver = "2"
members = [
    "programs/kamiyo-token",
    "programs/kamiyo-staking",
    "programs/kamiyo-airdrop",
    "programs/kamiyo-vesting",
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
