[package]
name = "kamiyo-airdrop"
version = "0.1.0"
description = "KAMIYO Airdrop Program - Merkle-tree-based token distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo_airdrop"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[dev-dependencies]
# NOTE: Temporarily commented out due to yanked solana_rbpf dependency
# solana-program-test = "=1.18.20"
# solana-sdk = "=1.18.20"
spl-token = "4.0"
