[package]
name = "kamiyo-staking"
version = "0.1.0"
description = "KAMIYO Token Staking Program with Tiered APY Rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# Anchor framework (matching token program version)
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# SPL Token-2022 for KAMIYO token compatibility
spl-token-2022 = { version = "5.0.0", features = ["no-entrypoint"] }

# Note: Use anchor_lang::solana_program instead of separate solana-program dependency
# to avoid version conflicts

[dev-dependencies]
# Testing dependencies
# NOTE: Temporarily commented out due to yanked solana_rbpf dependency
# solana-program-test = "=1.18.20"
# solana-sdk = "=1.18.20"
spl-associated-token-account = "4.0"
tokio = { version = "1.35", features = ["full"] }
