[package]
name = "kamiyo-token"
version = "0.1.0"
description = "KAMIYO Token-2022 Program with Transfer Fee Extension"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
# Anchor framework (0.30.1 as specified in requirements)
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# SPL Token-2022 (v5.0.0 for transfer fee extensions)
spl-token-2022 = { version = "5.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
# Development and testing dependencies
# NOTE: Temporarily commented out due to yanked solana_rbpf dependency
# Will use anchor test instead of cargo test
# solana-program-test = "=1.18.20"
# solana-sdk = "=1.18.20"
spl-associated-token-account = "4.0"
tokio = { version = "1.35", features = ["full"] }
