[package]
name = "kamiyo-vesting"
version = "0.1.0"
description = "KAMIYO Vesting Program - 24-month linear vesting with 6-month cliff"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kamiyo_vesting"

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
spl-token-2022 = { version = "5.0.2", features = ["no-entrypoint"] }
